# FocusTrace

./: .gitignore  Cargo.toml  README.md
macos/: AppIcon.icns  Info.plist
scripts/: bundle.sh  make_icon.py
src/: autostart.rs  ax.rs  db.rs  focus.rs  main.rs  reopen.rs  settings.rs  tray.rs  ui.rs
