[package]
name = "focustrace"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow"] }
egui = "0.29"
egui_extras = { version = "0.29", features = ["all_loaders"] }
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
crossbeam-channel = "0.5"
tray-icon = "0.19"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5"
objc2-foundation = { version = "0.2", features = ["NSString", "NSNotification", "NSRunLoop", "NSDate", "NSThread"] }
objc2-app-kit = { version = "0.2", features = ["NSWorkspace", "NSRunningApplication", "NSApplication"] }
core-foundation = "0.10"

[profile.release]
opt-level = 3
lto = "thin"
strip = true
